ctre-phoenix6-sys/src/bindings.rs

extern "C" {
    pub fn c_ctre_phoenix6_RequestControlDiff_VelocityDutyCycle_Position(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        updateTime: f64,
        cancelOtherRequests: bool,
        AverageRequest_Velocity: f64,
        AverageRequest_Acceleration: f64,
        AverageRequest_EnableFOC: bool,
        AverageRequest_FeedForward: f64,
        AverageRequest_Slot: ::std::os::raw::c_int,
        AverageRequest_OverrideBrakeDurNeutral: bool,
        AverageRequest_LimitForwardMotion: bool,
        AverageRequest_LimitReverseMotion: bool,
        DifferentialRequest_Position: f64,
        DifferentialRequest_Velocity: f64,
        DifferentialRequest_EnableFOC: bool,
        DifferentialRequest_FeedForward: f64,
        DifferentialRequest_Slot: ::std::os::raw::c_int,
        DifferentialRequest_OverrideBrakeDurNeutral: bool,
        DifferentialRequest_LimitForwardMotion: bool,
        DifferentialRequest_LimitReverseMotion: bool,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_RequestControlDiff_MotionMagicDutyCycle_Position(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        updateTime: f64,
        cancelOtherRequests: bool,
        AverageRequest_Position: f64,
        AverageRequest_EnableFOC: bool,
        AverageRequest_FeedForward: f64,
        AverageRequest_Slot: ::std::os::raw::c_int,
        AverageRequest_OverrideBrakeDurNeutral: bool,
        AverageRequest_LimitForwardMotion: bool,
        AverageRequest_LimitReverseMotion: bool,
        DifferentialRequest_Position: f64,
        DifferentialRequest_Velocity: f64,
        DifferentialRequest_EnableFOC: bool,
        DifferentialRequest_FeedForward: f64,
        DifferentialRequest_Slot: ::std::os::raw::c_int,
        DifferentialRequest_OverrideBrakeDurNeutral: bool,
        DifferentialRequest_LimitForwardMotion: bool,
        DifferentialRequest_LimitReverseMotion: bool,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_RequestControlDiff_DutyCycleOut_Velocity(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        updateTime: f64,
        cancelOtherRequests: bool,
        AverageRequest_Output: f64,
        AverageRequest_EnableFOC: bool,
        AverageRequest_OverrideBrakeDurNeutral: bool,
        AverageRequest_LimitForwardMotion: bool,
        AverageRequest_LimitReverseMotion: bool,
        DifferentialRequest_Velocity: f64,
        DifferentialRequest_Acceleration: f64,
        DifferentialRequest_EnableFOC: bool,
        DifferentialRequest_FeedForward: f64,
        DifferentialRequest_Slot: ::std::os::raw::c_int,
        DifferentialRequest_OverrideBrakeDurNeutral: bool,
        DifferentialRequest_LimitForwardMotion: bool,
        DifferentialRequest_LimitReverseMotion: bool,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_RequestControlDiff_PositionDutyCycle_Velocity(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        updateTime: f64,
        cancelOtherRequests: bool,
        AverageRequest_Position: f64,
        AverageRequest_Velocity: f64,
        AverageRequest_EnableFOC: bool,
        AverageRequest_FeedForward: f64,
        AverageRequest_Slot: ::std::os::raw::c_int,
        AverageRequest_OverrideBrakeDurNeutral: bool,
        AverageRequest_LimitForwardMotion: bool,
        AverageRequest_LimitReverseMotion: bool,
        DifferentialRequest_Velocity: f64,
        DifferentialRequest_Acceleration: f64,
        DifferentialRequest_EnableFOC: bool,
        DifferentialRequest_FeedForward: f64,
        DifferentialRequest_Slot: ::std::os::raw::c_int,
        DifferentialRequest_OverrideBrakeDurNeutral: bool,
        DifferentialRequest_LimitForwardMotion: bool,
        DifferentialRequest_LimitReverseMotion: bool,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_RequestControlDiff_VelocityDutyCycle_Velocity(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        updateTime: f64,
        cancelOtherRequests: bool,
        AverageRequest_Velocity: f64,
        AverageRequest_Acceleration: f64,
        AverageRequest_EnableFOC: bool,
        AverageRequest_FeedForward: f64,
        AverageRequest_Slot: ::std::os::raw::c_int,
        AverageRequest_OverrideBrakeDurNeutral: bool,
        AverageRequest_LimitForwardMotion: bool,
        AverageRequest_LimitReverseMotion: bool,
        DifferentialRequest_Velocity: f64,
        DifferentialRequest_Acceleration: f64,
        DifferentialRequest_EnableFOC: bool,
        DifferentialRequest_FeedForward: f64,
        DifferentialRequest_Slot: ::std::os::raw::c_int,
        DifferentialRequest_OverrideBrakeDurNeutral: bool,
        DifferentialRequest_LimitForwardMotion: bool,
        DifferentialRequest_LimitReverseMotion: bool,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_RequestControlDiff_MotionMagicDutyCycle_Velocity(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        updateTime: f64,
        cancelOtherRequests: bool,
        AverageRequest_Position: f64,
        AverageRequest_EnableFOC: bool,
        AverageRequest_FeedForward: f64,
        AverageRequest_Slot: ::std::os::raw::c_int,
        AverageRequest_OverrideBrakeDurNeutral: bool,
        AverageRequest_LimitForwardMotion: bool,
        AverageRequest_LimitReverseMotion: bool,
        DifferentialRequest_Velocity: f64,
        DifferentialRequest_Acceleration: f64,
        DifferentialRequest_EnableFOC: bool,
        DifferentialRequest_FeedForward: f64,
        DifferentialRequest_Slot: ::std::os::raw::c_int,
        DifferentialRequest_OverrideBrakeDurNeutral: bool,
        DifferentialRequest_LimitForwardMotion: bool,
        DifferentialRequest_LimitReverseMotion: bool,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_RequestControlDiff_VoltageOut_Position(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        updateTime: f64,
        cancelOtherRequests: bool,
        AverageRequest_Output: f64,
        AverageRequest_EnableFOC: bool,
        AverageRequest_OverrideBrakeDurNeutral: bool,
        AverageRequest_LimitForwardMotion: bool,
        AverageRequest_LimitReverseMotion: bool,
        DifferentialRequest_Position: f64,
        DifferentialRequest_Velocity: f64,
        DifferentialRequest_EnableFOC: bool,
        DifferentialRequest_FeedForward: f64,
        DifferentialRequest_Slot: ::std::os::raw::c_int,
        DifferentialRequest_OverrideBrakeDurNeutral: bool,
        DifferentialRequest_LimitForwardMotion: bool,
        DifferentialRequest_LimitReverseMotion: bool,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_RequestControlDiff_PositionVoltage_Position(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        updateTime: f64,
        cancelOtherRequests: bool,
        AverageRequest_Position: f64,
        AverageRequest_Velocity: f64,
        AverageRequest_EnableFOC: bool,
        AverageRequest_FeedForward: f64,
        AverageRequest_Slot: ::std::os::raw::c_int,
        AverageRequest_OverrideBrakeDurNeutral: bool,
        AverageRequest_LimitForwardMotion: bool,
        AverageRequest_LimitReverseMotion: bool,
        DifferentialRequest_Position: f64,
        DifferentialRequest_Velocity: f64,
        DifferentialRequest_EnableFOC: bool,
        DifferentialRequest_FeedForward: f64,
        DifferentialRequest_Slot: ::std::os::raw::c_int,
        DifferentialRequest_OverrideBrakeDurNeutral: bool,
        DifferentialRequest_LimitForwardMotion: bool,
        DifferentialRequest_LimitReverseMotion: bool,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_RequestControlDiff_VelocityVoltage_Position(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        updateTime: f64,
        cancelOtherRequests: bool,
        AverageRequest_Velocity: f64,
        AverageRequest_Acceleration: f64,
        AverageRequest_EnableFOC: bool,
        AverageRequest_FeedForward: f64,
        AverageRequest_Slot: ::std::os::raw::c_int,
        AverageRequest_OverrideBrakeDurNeutral: bool,
        AverageRequest_LimitForwardMotion: bool,
        AverageRequest_LimitReverseMotion: bool,
        DifferentialRequest_Position: f64,
        DifferentialRequest_Velocity: f64,
        DifferentialRequest_EnableFOC: bool,
        DifferentialRequest_FeedForward: f64,
        DifferentialRequest_Slot: ::std::os::raw::c_int,
        DifferentialRequest_OverrideBrakeDurNeutral: bool,
        DifferentialRequest_LimitForwardMotion: bool,
        DifferentialRequest_LimitReverseMotion: bool,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_RequestControlDiff_MotionMagicVoltage_Position(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        updateTime: f64,
        cancelOtherRequests: bool,
        AverageRequest_Position: f64,
        AverageRequest_EnableFOC: bool,
        AverageRequest_FeedForward: f64,
        AverageRequest_Slot: ::std::os::raw::c_int,
        AverageRequest_OverrideBrakeDurNeutral: bool,
        AverageRequest_LimitForwardMotion: bool,
        AverageRequest_LimitReverseMotion: bool,
        DifferentialRequest_Position: f64,
        DifferentialRequest_Velocity: f64,
        DifferentialRequest_EnableFOC: bool,
        DifferentialRequest_FeedForward: f64,
        DifferentialRequest_Slot: ::std::os::raw::c_int,
        DifferentialRequest_OverrideBrakeDurNeutral: bool,
        DifferentialRequest_LimitForwardMotion: bool,
        DifferentialRequest_LimitReverseMotion: bool,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_RequestControlDiff_VoltageOut_Velocity(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        updateTime: f64,
        cancelOtherRequests: bool,
        AverageRequest_Output: f64,
        AverageRequest_EnableFOC: bool,
        AverageRequest_OverrideBrakeDurNeutral: bool,
        AverageRequest_LimitForwardMotion: bool,
        AverageRequest_LimitReverseMotion: bool,
        DifferentialRequest_Velocity: f64,
        DifferentialRequest_Acceleration: f64,
        DifferentialRequest_EnableFOC: bool,
        DifferentialRequest_FeedForward: f64,
        DifferentialRequest_Slot: ::std::os::raw::c_int,
        DifferentialRequest_OverrideBrakeDurNeutral: bool,
        DifferentialRequest_LimitForwardMotion: bool,
        DifferentialRequest_LimitReverseMotion: bool,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_RequestControlDiff_PositionVoltage_Velocity(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        updateTime: f64,
        cancelOtherRequests: bool,
        AverageRequest_Position: f64,
        AverageRequest_Velocity: f64,
        AverageRequest_EnableFOC: bool,
        AverageRequest_FeedForward: f64,
        AverageRequest_Slot: ::std::os::raw::c_int,
        AverageRequest_OverrideBrakeDurNeutral: bool,
        AverageRequest_LimitForwardMotion: bool,
        AverageRequest_LimitReverseMotion: bool,
        DifferentialRequest_Velocity: f64,
        DifferentialRequest_Acceleration: f64,
        DifferentialRequest_EnableFOC: bool,
        DifferentialRequest_FeedForward: f64,
        DifferentialRequest_Slot: ::std::os::raw::c_int,
        DifferentialRequest_OverrideBrakeDurNeutral: bool,
        DifferentialRequest_LimitForwardMotion: bool,
        DifferentialRequest_LimitReverseMotion: bool,
    ) -> ::std::os::raw::c_int;
}
